hphp/hack/test/typecheck/tconst/constructor_error.php.exp
File "constructor_error.php", line 14, characters 26-27:
Invalid argument (Typing[4110])
File "constructor_error.php", line 8, characters 39-45:
This is the expression dependent type <static>::T
  that is compatible with the abstract type constant this::T
  that is compatible with the abstract type constant X::T
  that is compatible with an array key (int/string)
File "constructor_error.php", line 14, characters 15-28:
  where '<static>' is a reference to this expression
File "constructor_error.php", line 4, characters 14-14:
  resulting from expanding a type constant as follows:
    <static>::T -> this::T -> X::T
File "constructor_error.php", line 14, characters 26-27:
It is incompatible with a string
